--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,4 +1,5 @@
 imports:
+    - { resource: parameters_defaults.yml }
     - { resource: parameters.yml }
     - { resource: security.yml }
 
@@ -28,6 +29,9 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    form:
+        resources:
+            - "::form_theme.html.twig"
 
 # Assetic Configuration
 assetic:
